Added scope to package

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "ludorum-game-mancala",
+	"name": "@creatartis/ludorum-game-mancala",
 	"description": "Mancala board game implementation for Ludorum.",
 	"keywords": [
 		"board-game",
@@ -32,6 +32,6 @@
 		"sermat": "~0.0.8"
 	},
 	"devDependencies": {
-		"creatartis-grunt": "~0.0.3"
+		"creatartis-grunt": "~0.0.4"
 	}
 }
